--- a/package.json
+++ b/package.json
@@ -38,5 +38,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.17",
+    "@types/styled-components": "^5.1.26",
+    "typescript": "^4.7.4"
   }
 }
